# GLmath

./: Makefile.in  README.md  VectorMath.pc.in  configure.in
src/: Makefile.in  mat.hpp  mat4.h  mat4f.cpp  quat.cpp  quat.h  quat.hpp  vec.h  vec.hpp
test/: Makefile.in  main.cpp
