#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([VectorMath], [2012.09.09], [emmanuel.boudreault@gmail.com])
AC_CONFIG_SRCDIR([src])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET

AC_CONFIG_FILES([src/Makefile] [test/Makefile] [VectorMath.pc])

AC_OUTPUT
