#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GLmath], [2015.14.02], [emmanuel.boudreault@gmail.com])
AC_CONFIG_SRCDIR([src])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile] [src/Makefile] [GLmath.pc])

AC_OUTPUT
